gcc/testsuite/gcc.dg/c23-tag-enum-3.c
/* { dg-do compile }
 * { dg-options "-std=c23" }
 */

enum A { N = 0 * sizeof(enum A { M = 1 }) }; 	/* { dg-error "nested" } */


